--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -12,7 +12,7 @@
     <div>
         <form th:action="@{/logout}" method="post">
             <p>
-                Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b>
+                Welcome
             </p>
             <input type="submit" value="Sign Out" />
         </form>
